--- a/Barrio1/AppShell.xaml
+++ b/Barrio1/AppShell.xaml
@@ -7,6 +7,7 @@
     xmlns:Views="clr-namespace:Barrio1.Views"
     Shell.FlyoutBehavior="Disabled"
     Title="Barrio1"
+    BackgroundColor="{DynamicResource Fondo}"
     >
 
     <ShellContent
