--- a/Barrio1/Resources/Styles/Colors.xaml
+++ b/Barrio1/Resources/Styles/Colors.xaml
@@ -42,4 +42,14 @@
     <SolidColorBrush x:Key="Gray600Brush" Color="{StaticResource Gray600}"/>
     <SolidColorBrush x:Key="Gray900Brush" Color="{StaticResource Gray900}"/>
     <SolidColorBrush x:Key="Gray950Brush" Color="{StaticResource Gray950}"/>
+
+    <!-- Colores oscuros-->
+    <Color x:Key="BotonO">#5086c6</Color>
+    <Color x:Key="FuenteO">#fdfce8</Color>
+    <Color x:Key="FondoMarcoO">#2e2e2e</Color>
+
+    <!-- Colores claros -->
+    <Color x:Key="BotonC">#cb123e</Color>
+    <Color x:Key="FuenteC">#111111</Color>
+    <Color x:Key="FondoMarcoC">#fefef6</Color>
 </ResourceDictionary>
